--- a/index.html
+++ b/index.html
@@ -288,31 +288,41 @@ Delete
 `;
 });
 }
-
   function openUserTransactions(userId,userName){
 
 if(!userId) return;
 
 db.collection("transactions")
 .where("walletUserId","==",String(userId))
-.orderBy("createdAt","desc")
-.limit(100)
 .get()
 .then(snap=>{
+
+let transactions = [];
+
+snap.forEach(doc=>{
+transactions.push(doc.data());
+});
+
+// 🔹 Sort manually by date (latest first)
+transactions.sort((a,b)=>{
+const t1 = a.createdAt?.toMillis ? a.createdAt.toMillis() : 0;
+const t2 = b.createdAt?.toMillis ? b.createdAt.toMillis() : 0;
+return t2 - t1;
+});
 
 let html = `
 <div style="max-height:60vh;overflow:auto;padding-right:6px">
 `;
 
-if(snap.empty){
+if(transactions.length === 0){
 html += `
 <div style="text-align:center;color:#94a3b8;padding:20px">
 No Transactions Found
 </div>`;
 }else{
 
-snap.forEach(doc=>{
-const t = doc.data();
+transactions.slice(0,100).forEach(t=>{
+
 const isCredit = t.type === "credit";
 
 html += `
@@ -347,8 +357,9 @@ ${isCredit ? '⬆' : '⬇'}
 ${isCredit ? 'Credit' : 'Debit'}
 </div>
 <div style="font-size:12px;color:#94a3b8">
-${t.createdAt?.toDate ? 
-new Date(t.createdAt.toDate()).toLocaleString() : ''}
+${t.createdAt?.toDate 
+? new Date(t.createdAt.toDate()).toLocaleString()
+: ''}
 </div>
 </div>
 
